Simple Drawing with canvas

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   color-scheme: light dark;
   background-color: white;
   color:black;
+  background-image: url(./assets/WAM_bg.jpg);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
