basic menu page

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,8 @@
 
   color-scheme: light dark;
   background-color: white;
-  color:black;
   background-image: url(./assets/WAM_bg.jpg);
-
+  color: white;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
