--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  font-family: "Pixelify Sans" , sans-serif !important;
   color-scheme: light dark;
   background-color: white;
   background-image: url(./assets/WAM_bg.jpg);
@@ -13,11 +13,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.pixelFont{
+  font-family: "Pixelify Sans" , sans-serif !important;
+}
+
+.gameText{
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  color: aliceblue
+}
+
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -35,6 +45,8 @@ h1 {
   line-height: 1.1;
 }
 
+
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -46,12 +58,12 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
-
