--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
   font-family: "Pixelify Sans" , sans-serif !important;
   color-scheme: light dark;
   background-color: black;
-
+  background:url(./assets/BGTexture.png);
+  image-rendering: pixelated;
+  background-size: 100%;
   color: white;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,6 +17,7 @@
 
 .shaker{
   background-image: url(./assets/bg.png);
+  background-repeat: no-repeat;
   background-size: contain;
   image-rendering: pixelated;
 }
