--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,9 @@
 
 .shaker{
   background-image: url(./assets/bg.png);
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   image-rendering: pixelated;
 }
 
